Changes for 1.3.8
   Don't report power of two warning for background images
   Rotate texture coordinates
   Horizontal/vertical flip texture coordinates
   Fix to prevent selection of hidden faces when using the "ignore
      back-facing" option
   Fix broken shortcuts on geometry sub-menus
   Fix coverage build/autoconf
   Fix help links on Windows
   Fix several compilation warnings

Changes for 1.3.7
   Added "Apply to selected" for Transform Model
   Export Selected (geometry, joints, points, and textures)
   Set exact position of rotate point for rotate tool
   More complete version support for Cal3D (700 through 1200)
   Read compressed animations in Cal3D
   Report error if saving MD2 or MD3 with faces that are not assigned
      to a group
   Fix to dissallow primitives additions using subdivide or addPoint
   Fix interpolation bug where rotation was not taking the shortest
      path to the new orientation
   Have a minimum animation redraw of 20 fps to show interpolation on slow
      animations
   Performance fixes for normal calculation (about 40% speed improvement)
   Performance fixes for MD3 loading (about 8x speed improvement)
   Added --enable-profile to ./configure
   Added --language to override the system locale
   Prevent select connected from selecting hidden faces
   Do not perform selection in frame animation mode if there are no
      animations
   Changed poly tool's "Fan" checkbox into a Strip/Fan combo box
   Implemented new equiv test and split CompareBits into
      CompareParts and PartProperties

Changes for 1.3.6
   Save/restore window size
   Include projection in frame all/selected command
   Open projection window from group and projection properties panels
   Allow multiple multiple bone joints for MS3D (subversions 1 and 2)
   Initial Cal3D support
   Better MD3_PATH handling
      Get MD3_PATH from shaders as well as model header
      Allow separate MD3_PATH for each shader