@@ -2,9 +2,6 @@ For 1.4:
    Finish doc TODO list
    Fix keyboard shortcut for unhide all
    Update plugin docs to point to User's 1.4 plugin directory
-   Investigate MD2 export changes to find Rab,d's crash
-   dvh's bugs on the forum
-      I beam cursor
 
 For 1.6:
    Resample animation
