@@ -2,10 +2,13 @@ Changes for 1.3.8
    Don't report power of two warning for background images
    Rotate texture coordinates
    Horizontal/vertical flip texture coordinates
+   Allow user to set color of texture coordinate lines and selection vertices.
    Fix to prevent selection of hidden faces when using the "ignore
       back-facing" option
    Fix broken shortcuts on geometry sub-menus
    Fix coverage build/autoconf
+   Fix MD2 export (vertex/texture coord indices)
+   Fix cursor, reset coords, and zoom on texture coordinates window
    Fix help links on Windows
    Fix several compilation warnings
 
